[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ysr3-cli"
version = "0.1.0"
description = "CLI tool for querying and exporting data from the YSR3 stroke registry"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
merge = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
ysr3 = "ysr3_cli.main:app"

[tool.setuptools.packages.find]
include = ["ysr3_cli*"]
