[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartdb-cli"
version = "0.1.0"
description = "CLI tool for querying and exporting data from the SmartDB registry"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
merge = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
smartdb = "smartdb_cli.main:app"

[tool.setuptools.packages.find]
include = ["smartdb_cli*"]
