[project]
name = "ysr3-mcp-v2"
version = "0.1.0"
description = "MCP server for YSR3 Stroke Registry (API-backed, no direct DB access)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
